--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Bryan Navarrete",
   "license": "MIT",
   "dependencies": {
+    "dotenv": "^16.0.1",
     "express": "^4.16.4",
     "express-graphql": "^0.8.0",
     "graphql": "^14.2.1",
